--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,3 @@
-[tool.ruff]
-line-length = 88
-target-version = "py311"
-select = ["E", "F", "W", "C90"]
-ignore = ["E501"]
-
-[tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q"
-testpaths = [
-    "tests",
-    "src/components/calculator/tests",
-    "src/components/logger/tests",
-    "src/components/notifier/tests"
-]
-
 [project]
 name = "python-template-repo"
 version = "0.1.0"
@@ -28,12 +12,30 @@ dev = [
     "ruff",
     "mypy",
     "uv",
-    "nose2[coverage_plugin]",
     "coverage",
     "black",
     "flake8",
     "bandit",
+    "pytest-xdist"
 ]
+
+[tool.ruff.lint]
+select = ["F", "E", "W", "I", "UP", "D", "ANN"]
+ignore = ["D100", "D104", "D107", "ANN101"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+    "src/components/ai_conversation_client/tests"
+]
+
+[tool.mypy]
+plugins = ["typeshed_client.plugin"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
