--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,8 +85,7 @@ jobs:
           path: test-results/
           destination: test-results
       
-      - run: uv run pytest tests/Unit/ai_conversation/
-      - run: uv run pytest tests/Integration/
+      - run: pytest src/components/ai_conversation_client/tests/
 
   code_quality:
     docker:
