--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
 
       - run:
           name: Install UV
-          command: pip install uv
+          command: |
+            curl -LsSf https://astral.sh/uv/install.sh | sh
 
       - run:
           name: Create uv virtual environment
@@ -86,34 +87,36 @@ jobs:
           destination: test-results
 
   code_quality:
-    docker:
-      - image: cimg/python:3.11
-    steps:
-      - checkout
+  docker:
+    - image: cimg/python:3.11
+  steps:
+    - checkout
 
-      - run:
-          name: Install UV
-          command: pip install uv
+    - run:
+        name: Install UV
+        command: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
 
-      - run:
-          name: Create uv virtual environment
-          command: uv venv
+    - run:
+        name: Create uv virtual environment
+        command: uv venv
 
-      - run:
-          name: Set environment variables
-          command: |
-            echo "export PYTHONPATH=$(pwd)" >> $BASH_ENV
-            echo "source .venv/bin/activate" >> $BASH_ENV
+    - run:
+        name: Set environment variables
+        command: |
+          echo "export PYTHONPATH=$(pwd)" >> $BASH_ENV
+          echo "source .venv/bin/activate" >> $BASH_ENV
 
-      - run:
-          name: Install dependencies and Black
-          command: |
-            uv pip install -e ".[dev]"
-            uv pip install black
+    - run:
+        name: Install dependencies and Ruff
+        command: |
+          uv pip install -e ".[dev]"
+          uv pip install ruff
 
-      - run:
-          name: Run Black (code formatting)
-          command: black src/ tests/
+    - run:
+        name: Run Ruff (code linting and formatting)
+        command: ruff check src/ tests/ --fix
+
 
   dependency_scanning:
     docker:
@@ -123,7 +126,8 @@ jobs:
 
       - run:
           name: Install UV
-          command: pip install uv
+          command: |
+            curl -LsSf https://astral.sh/uv/install.sh | sh
 
       - run:
           name: Create uv virtual environment
