--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,11 @@ warn_unused_configs = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 
+[mypy.plugins.numpy.*]
+ignore_missing_imports = True
+
 [mypy-pytest.*]
 ignore_missing_imports = True
 
 [mypy-requests.*]
-ignore_missing_imports = True
+ignore_missing_imports = True 
