--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.ruff]
 target-version = "py38"
-line-length = 120
+line-length = 88
 src = ["src", "tests"]
 extend-exclude = ["venv", "env", ".env", ".venv"]
 
@@ -15,12 +15,10 @@ ignore = [
     "ANN101",  # Missing type annotation for `self` in method
     "ANN102",  # Missing type annotation for `cls` in classmethod
     "ANN401",  # Dynamically typed expressions are disallowed
-    "E501",    # Line too long
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"src/components/ai_conversation_client/*.py" = ["E501"]
-"**/*.py" = ["E501"]
+# Add any other ignore patterns here if needed, but no E501
 
 [tool.pytest.ini_options]
 minversion = "6.0"
