Add missing tests

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,9 @@
 [mypy]
-strict = true
+python_version = 3.9
+warn_return_any = True
+warn_unused_configs = True
+disallow_untyped_defs = True
+namespace_packages = True
+
+[mypy-pytest.*]
+ignore_missing_imports = True
