--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,12 +142,19 @@ jobs:
           name: Install dependencies and Safety (pin Marshmallow)
           command: |
             uv pip install -e ".[dev]"
-            # Pin marshmallow<4 so pass_many remains available to older plugins
-            uv pip install safety marshmallow<4
+            # install safety, and quote the version specifier so "<4" isn't a shell redirection
+            uv pip install safety "marshmallow<4"
 
       - run:
-          name: Scan dependencies for security issues
-          command: safety scan
+          name: Run Safety (dependency scanning)
+          command: |
+            if [ -f requirements.txt ]; then
+              echo "Using safety scan on requirements.txt..."
+              safety scan --file=requirements.txt --full-report
+            else
+              echo "Running full-project safety scan..."
+              safety scan --full-report
+            fi
 
 workflows:
   version: 2
