--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,22 +139,22 @@ jobs:
             echo "source .venv/bin/activate" >> $BASH_ENV
 
       - run:
-          name: Install dependencies and Safety (pin Marshmallow)
+          name: Install dependencies and Safety (pin to v2)
           command: |
             uv pip install -e ".[dev]"
-            # install safety, and quote the version specifier so "<4" isn't a shell redirection
-            uv pip install safety "marshmallow<4"
+            uv pip install "safety<3" "marshmallow<4"
 
       - run:
-          name: Run Safety (dependency scanning)
+          name: Run Safety Check (dependency scanning)
           command: |
             if [ -f requirements.txt ]; then
-              echo "Using safety scan on requirements.txt..."
-              safety scan --file=requirements.txt --full-report
+              echo "Using safety check on requirements.txt..."
+              safety check --file=requirements.txt --full-report
             else
-              echo "Running full-project safety scan..."
-              safety scan --full-report
+              echo "Running full-project safety check..."
+              safety check --full-report
             fi
+
 
 workflows:
   version: 2
