--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,8 @@
 [pytest]
-testpaths = src tests
+testpaths = tests
 python_files = test_*.py
 addopts = 
     --verbose
-    --cov=src
-    --cov-report=term
-    --cov-report=xml:test-results/coverage.xml
-    --cov-report=html:test-results/coverage-html
-    --junitxml=test-results/junit.xml
-    -n auto
 
 # Coverage configuration
 [coverage:run]
