--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ description = "Python template repository"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
